# barotropy

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitlab-ci.yml  README.md  TODO.md  barotropic_model.m  environment.yaml  genindex.html  index.html  install_local.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: api_reference.doctree  barotropic_model.doctree  bibliography.doctree  developer_guide.doctree  installation.doctree  introduction.doctree  tutorials.doctree
.github/workflows/: ci.yml  deploy_docs.yaml  publish_to_pypi.yaml
_modules/: barotropy.html  index.html
_modules/barotropy/: barotropic_model.html  graphics.html  isentropic_nozzle.html  kaist_postprocessing.html  math.html  mcerp.html  plot_options.html  sCO2_utilities.html  (+2 more)
_sources/: index.rst  index.rst.txt
_static/: documentation_options.js
barotropy/: __init__.py  barotropic_model.py  fluent_automation.py  fluent_plot_nozzle_data.py  fluid_properties.py  graphics.py  isentropic_nozzle.py  kaist_postprocessing.py  plot_options.py  rcParams_default.txt  sCO2_utilities.py  stream_residuals.py  thermodynamic_cycles.py  uncertainty_utilities.py  utilities.py
demos/: extended_quality.py  generate_dependencies.m  python_props.py  sonic_state_computations.py  spinodal_lines.py  test_cases_equilibrium.m  two_component_demo.m  wrapping_angle_demo.py
dependencies/: compute_properties_metastable_Td.m  compute_saturation_line.m  compute_saturation_point_entropy.m  compute_spinodal_line.m  compute_spinodal_point.m  compute_spinodal_point_entropy.m  create_barotropic_model.m  create_barotropic_model_segment.m  export_fluent_expressions.m  plot_barotropic_polynomials.m  plot_barotropic_process_ps.m  plot_phase_diagram.m  set_plot_options.m
development/: quality_entropy_solver.py
docs/: CHANGELOG.md  build_docs.py  conf.py  git_cleaning_guide.md  index.rst  requirements.txt
documentation/: dependencies.md  mixture_equation_derivation.md  thermodynamic_properties.md  work_progress.md
fluid_properties/: cycle_optimization.py  demo.md  extended_quality.py  sonic_state_computations.py
projects/: readme.md
source/: api_reference.html  barotropic_model.html  bibliography.html  developer_guide.html  installation.html  introduction.html  tutorials.html
tests/: generate_dependencies.m  test_cases_metastable.m  test_example_cases.py  utilities.py
tutorials/: barotropic_simulations.py  compare_data.py  launch_sim_v1.py  nitrogen_expansion.py
validation/: validation_overview.xlsx
(+749 files in other folders)
